--- a/TrioAsync.ipynb
+++ b/TrioAsync.ipynb
@@ -677,6 +677,9 @@
         "Let the caller handle timeouts.\n",
         "\n",
         "When a scope is Cancelled, it will continue to raise Cancellation exceptions till handled."
+        "\n",
+        "\n",
+        "Trio has a couple of calls for sending aync functions into a thread, and getting the results back from that thread."
       ]
     },
     {
